@startuml

title __ENTITYUTIL's Class Diagram__\n

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.AziendaUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + isCellulareAziendaToBeCompleted()
              + isDatiFatturazioneToBeCompleted()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.CalcoliUtil {
              + calcPercentualeProvvigione()
              + calcProvvigioneTotale()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.ClienteUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + calcAnniAssunzione()
              + calcEta()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.EstinzioneUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + calcConteggioEstinzione()
              + calcConteggioEstinzione()
              + calcMesiScadenza()
              + calcMesiScadenza()
              + calcScadenzaEstinzione()
              + calcScadenzaEstinzione()
              + getDataNotificaConteggioEstinzione()
              - calcConteggioEstinzione()
              - calcMesiScadenza()
              - calcScadenzaEstinzione()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.PraticaUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + calcConteggioEstinzioneTotale()
              + calcConteggioEstinzioneTotale()
              + calcDataRinnovo()
              + calcDataRinnovo()
              + calcDebitoResiduo()
              + calcDebitoResiduo()
              + calcInteressi()
              + calcInteressi()
              + calcInteressi()
              + calcInteressi()
              + calcMontante()
              + calcMontante()
              + calcNettoMensile()
              + calcNettoMensile()
              + calcNettoMensile()
              + calcNettoRicavo()
              + calcNettoRicavo()
              + calcNettoRicavo()
              + calcPercProv()
              + calcPercProv()
              + calcPercProv()
              + calcProvTotale()
              + calcProvTotale()
              + calcRateScadenza()
              + calcRateScadenza()
              + calcScadenzaPratica()
              + calcScadenzaPratica()
              + sumErogato()
              + sumMontante()
              + sumProvvigione()
              - calcConteggioEstinzioneTotale()
              - calcConteggioEstinzioneTotale()
              - calcDataRinnovo()
              - calcDebitoResiduo()
              - calcInteressi()
              - calcMontante()
              - calcNettoRicavo()
              - calcNettoRicavo()
              - calcProvTotale()
              - calcRateScadenza()
              - calcScadenzaPratica()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.PreventivoUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + calcInteressi()
              + calcInteressi()
              + calcPercentualeProvvigione()
              + calcPercentualeProvvigione()
              + calcProvvigioneTotale()
              + calcProvvigioneTotale()
              + calcProvvigioneTotale()
              - calcPercentualeProvvigione()
              - calcProvvigioneTotale()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.ResidenzaUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + anniResidenza()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.RicaricaUtil {
              {static} + IVA : BigDecimal
              {static} + JSF_NAME : String
              {static} + NAME : String
              + calcImportoIvaEsclusa()
              + calcImpostaIva()
              + calcPrezzoUnitario()
              + calcPrezzoUnitarioIvaEsclusa()
              - calcImportoIvaEsclusa()
              - calcImpostaIva()
              - calcPrezzoUnitario()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.SettingUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + getAliasMittente()
          }
        }
      }
    }
  }
  

  namespace com.woonders.lacemscommon {
    namespace db {
      namespace entity {
        namespace til {
          class com.woonders.lacemscommon.db.entityutil.TrattenutaUtil {
              {static} + JSF_NAME : String
              {static} + NAME : String
              + calcConteggioTrat()
              + calcConteggioTrat()
              + calcDataRinnovoTrat()
              + calcDataRinnovoTrat()
              + calcDataRinnovoTrat()
              + calcRateScadenza()
              + calcRateScadenza()
              + calcRateScadenza()
              + calcScadenzaTrat()
              + calcScadenzaTrat()
              - calcConteggioTrat()
              - calcScadenzaTrat()
          }
        }
      }
    }
  }
  

  com.woonders.lacemscommon.db.entityutil.PraticaUtil o-- com.woonders.lacemscommon.db.entityutil.CalcoliUtil : calcoliUtil
  com.woonders.lacemscommon.db.entityutil.PraticaUtil o-- com.woonders.lacemscommon.db.entityutil.EstinzioneUtil : estinzioneUtil
  com.woonders.lacemscommon.db.entityutil.PreventivoUtil o-- com.woonders.lacemscommon.db.entityutil.CalcoliUtil : calcoliUtil
  com.woonders.lacemscommon.db.entityutil.PreventivoUtil o-- com.woonders.lacemscommon.db.entityutil.PraticaUtil : praticaUtil


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
